# collabtrans

./: .gitignore  DocuTranslate.icns  GLOSSARY_MANAGEMENT.md  I18N_OPTIMIZATION_SUMMARY.md  LDAP_GROUP_QUERY_FIX.md  LDAP_GROUP_SWITCHES.md  LDAP_TEST_CONNECTION_ENHANCED.md  LICENSE  README.md  README_EN.md  README_JP.md  README_ZH.md  SECURITY_CONFIG.md  analyze_settings_i18n.py  app.spec  app_config.json  app备份.spec  auth_config.json  debug_ldap_ui.html  first_deploy.bat  full.spec  full_dir.spec  full_onefile.spec  global_config.json  lite.spec  lite_dir.spec  lite_mac.spec  lite_mac_x86_64.spec  local_secrets.json.template  manage_config.py  pyproject.toml  release notes.txt  requirements.txt  review_upstream_commits.sh  selective_merge.sh  setup_first_deploy.py  setup_secrets.py  test_group_query.py  test_ldap_groups.py  test_ldap_ui.js  (+3 more)
.github/workflows/: build-macos-x86.yml  build-macos.yml  build-windows-full.yml  build-windows.yml
collabtrans/: app.py  cli.py
collabtrans/agents/: agent.py  glossary_agent.py  segments_agent.py
collabtrans/auth/: config.py  ldap_client.py  models.py  routes.py  session_manager.py  user_profile.py
collabtrans/cacher/: __init__.py  md_based_convert_cacher.py
collabtrans/config/: README.md  app_config.py  global_config.py  secrets_manager.py
collabtrans/context/: md_mask_context.py
collabtrans/converter/: base.py  converter_identity.py
collabtrans/exporter/: __init__.py  base.py
collabtrans/global_values/: __init__.py
collabtrans/glossary/: __init__.py  glossary.py  models.py
collabtrans/ir/: attachment_manager.py  markdown_document.py
collabtrans/static/: autoRender.js  i18nData.json  index.html  pico.css  settings.html
collabtrans/template/: markdown.html  txt.html
collabtrans/translator/: __init__.py  base.py
collabtrans/utils/: docling_utils.py  markdown_splitter.py  redis_manager.py  resource_utils.py  utils.py
collabtrans/workflow/: base.py  docx_workflow.py  epub_workflow.py  html_workflow.py  interfaces.py  json_workflow.py  md_based_workflow.py  srt_workflow.py  txt_workflow.py  xlsx_workflow.py
doc/: CONFIG_MIGRATION_SUMMARY.md  TOKEN_PERFORMANCE_GUIDE.md  ldap3-migration.md  python-ldap-windows-solution.md  redis-auto-management.md
docutranslate/: __init__.py  app.py  app.py.backup  cli.py  translater.py
docutranslate/Agents/: __init__.py  agent.py  markdown_agent.py
docutranslate/agents/: __init__.py  agent.py  agent_async.py  agent_sync.py  agent_thread.py  glossary_agent.py  markdown_agent.py  segments_agent.py  txt_agent.py
docutranslate/auth/: __init__.py  config.py  ldap_client.py  middleware.py  models.py  routes.py  session_manager.py  user_profile.py
docutranslate/cache/: __init__.py  document_cacher.py
docutranslate/cacher/: __init__.py  document_cacher.py  md_based_convert_cacher.py
docutranslate/config/: __init__.py  global_config.py  profile_manager.py  secrets_manager.py
docutranslate/context/: md_mask_context.py
docutranslate/converter/: __init__.py  base.py  converter.py  converter_docling.py  converter_identity.py  converter_mineru.py  interfaces.py
docutranslate/decorator/: markdown_mask.py
docutranslate/exporter/: __init__.py  base.py  export_config.py  interfaces.py
docutranslate/global_values/: __init__.py  conditional_import.py
docutranslate/glossary/: glossary.py  manager.py  storage.py
docutranslate/ir/: attachment.py  attachment_manager.py  document.py  (+1 more)
filetranslate/: translater.py
user_profiles/: admin_profile.json
(+160 files in other folders)
