[project]
name = "docutranslate"
description = "文件翻译工具"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx==0.27.2",
    "fastapi[standard]>=0.115.12",
    "jsonpath-ng>=1.7.0",
    "openpyxl>=3.1.5",
    "xlsx2html>=0.6.2",
    "json-repair>=0.48.0",
    "mammoth>=1.10.0",
    "srt>=3.5.3",
    "lxml>=5.4.0",
    "python-docx>=1.2.0",
    "beautifulsoup4>=4.13.4",
    "markdown>=3.8.2",
    "pymdown-extensions>=10.16.1",
    "chardet>=5.2.0",
]
dynamic = ["version"]

[project.optional-dependencies]
docling = [
    "opencv-python>=4.11.0.86",
    "docling>=2.40.0",
]

[dependency-groups]
dev = [
    "opencv-python>=4.11.0.86",
    "docling>=2.40.0",
    "pyinstaller>=6.14.2",
]
[project.scripts]
docutranslate = "docutranslate.cli:main"

[build-system]
requires = ["setuptools>=80.9.0"] # 或者你需要的 setuptools 版本
build-backend = "setuptools.build_meta"
backend-path = ["."]
[tool.setuptools]
#packages = ["docutranslate"]
[tool.setuptools.packages.find]
where = ["."]
include = ["docutranslate*"]
[tool.setuptools.package-data]
docutranslate = ["static/**", "template/**"]

[tool.setuptools.dynamic]
version = { attr = "docutranslate.__version__" }

